@@ -1,5 +1,7 @@
 git-annex (7.20191025) UNRELEASED; urgency=medium
 
+  * init: Fix bug that lost modifications to unlocked files when init is
+    re-ran in an already initialized repo.
   * benchmark: Add --databases to benchmark sqlite databases.
 
  -- Joey Hess <id@joeyh.name>  Tue, 29 Oct 2019 15:13:03 -0400
